# Template-Python-Hexagonal-With-Prisma

./: .gitignore  Dockerfile  Makefile  README.md  bandit.yml  pyproject.toml
src/: entrypoint.sh  main.py
src/domain/models/core/: __init__.py  dependency_injections.py  injections_payload.py
src/domain/models/database/: __init__.py  generic_db_return.py
src/domain/services/core/bridges/: __init__.py  dependency_injection_bridge.py
src/domain/services/core/providers/: __init__.py  environment_variables_provider.py
src/domain/services/database/factories/: __init__.py  database_connection_factory.py
src/domain/services/database/providers/: __init__.py  database_executor_provider.py
src/domain/usecases/core/: __init__.py  get_dependency_injections.py
src/domain/usecases/database/: start_database.py
src/entrypoints/controllers/: __init__.py  get_dependency_injections_controller.py  start_database_controller.py
src/infrastructure/adapters/core/dependency_injection_bridges/: dependency_injection_core.py
src/infrastructure/adapters/core/environment_variables_providers/: environment_variables_toml.py
src/infrastructure/adapters/database/database_connection_factories/: __init__.py  database_connection_factory_prisma.py
src/infrastructure/adapters/database/database_executor_providers/: __init__.py  database_executor_provider_prisma.py
