[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["authors name"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bandit = "^1.7.4"
requests = "^2.28.2"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pydantic = "^1.10.7"
prisma = "^0.12.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.group.code-quality.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
bandit = "^1.7.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true

[tool.flake8]
per-file-ignores = "__init__.py:F401"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[tool.mypy]
mypy_path = "src"
exclude = "tests"
explicit_package_bases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
